feat: Fix Unit Test